# template-deneir-script

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yaml  doc-request.yaml  feature-request.yaml
