[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "TODO"
version = "0.0.1"
description = "TODO"
authors=[{ name = "AUTHOR" }]
maintainers = [{ name = "AUTHOR" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["dependencies"]
keywords = ["python", "machine learning", "natural language processing"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/eriknovak/template-experiment-project"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest",
    "coverage",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
